highlight typeahead matches with a pipe and fix up some form config

--- a/client/src/app/forms/config/types/acmg-code-select/acmg-code-select.type.html
+++ b/client/src/app/forms/config/types/acmg-code-select/acmg-code-select.type.html
@@ -15,7 +15,7 @@
         [nzValue]="opt">
         <nz-space>
           <span *nzSpaceItem>
-            {{ opt.code }} - {{ opt.description }}
+            <span [innerHtml]="opt.code | highlightTypeahead: this.searchVal"></span> - {{ opt.description }}
           </span>
         </nz-space>
       </nz-option>
