--- a/client/src/themes/default.less
+++ b/client/src/themes/default.less
@@ -47,3 +47,7 @@
 
 // PUT CUSTOM GLOBALS IN global-variables.less
 @import 'themes/global-variables.less';
+
+.typeahead-match {
+  font-weight: bold;
+}
