--- a/client/src/app/forms/config/types/disease-input/disease-input.type.html
+++ b/client/src/app/forms/config/types/disease-input/disease-input.type.html
@@ -15,9 +15,9 @@
         [nzLabel]="opt.tooltip"
         [nzValue]="opt.disease">
         <nz-space>
-          <span *nzSpaceItem>{{ opt.label }}</span>
-          <span nz-typography nzType="secondary" *nzSpaceItem>
-            {{ opt.disease.diseaseAliases.join(', ') }}
+          <span *nzSpaceItem [innerHtml]="opt.label |  highlightTypeahead: this.to.searchString"></span>
+          <span nz-typography nzType="secondary" *nzSpaceItem
+          [innerHtml]="opt.disease.diseaseAliases.join(', ')  | highlightTypeahead: this.to.searchString">
           </span>
         </nz-space>
       </nz-option>
