--- a/client/src/app/forms/assertion-submit/assertion-submit.form.html
+++ b/client/src/app/forms/assertion-submit/assertion-submit.form.html
@@ -31,3 +31,11 @@
     </ng-container>
   </ng-template>
 </nz-spin>
+
+<div nz-row>
+  <div nz-col
+    nzSpan="24">
+    <ngx-json-viewer *ngIf="formModel"
+      [json]="formModel"></ngx-json-viewer>
+  </div>
+</div>
