variant group add/revise views & submit/suggest form pages added

--- a/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.view.html
+++ b/client/src/app/views/variant-groups/variant-groups-detail/variant-groups-detail.view.html
@@ -23,7 +23,7 @@
 
           <!-- add revision btn -->
           <span *nzSpaceItem>
-            <button routerLink="suggest-revision"
+            <button [routerLink]="['/variant-groups', variantGroup.id, 'revise']"
               *ngIf="viewer.signedIn"
               routerLinkActive
               #rlaComments="routerLinkActive"
