--- a/client/src/app/views/variant-groups/variant-groups-add/variant-groups-add.view.html
+++ b/client/src/app/views/variant-groups/variant-groups-add/variant-groups-add.view.html
@@ -1,1 +1,28 @@
-<p>variant-groups-add works!</p>
+<cvc-section-navigation displayName="New"></cvc-section-navigation>
+<nz-page-header class="site-page-header">
+
+  <!-- title -->
+  <nz-page-header-title cvcFlaggableOptions>
+    <i nz-icon nzType="civic:evidence"></i>
+    Add New Variant Group
+  </nz-page-header-title>
+
+  <nz-page-header-subtitle>
+    Submit and review new Variant Groups
+  </nz-page-header-subtitle>
+
+  <nz-page-header-content>
+    <div class="content">
+      <div *ngIf="isSignedIn$ | ngrxPush as isSignedIn; else notSignedIn">
+        <router-outlet></router-outlet>
+      </div>
+      <ng-template #notSignedIn>
+        <nz-row nzSpan="24" nzJustify="center">
+          <div nz-col nzSpan="6">
+            <cvc-login-prompt></cvc-login-prompt>
+          </div>
+        </nz-row>
+      </ng-template>
+    </div>
+  </nz-page-header-content>
+</nz-page-header>
