update event filtering contexts and count logic

--- a/client/src/app/views/organizations/organizations-events/organizations-events.component.html
+++ b/client/src/app/views/organizations/organizations-events/organizations-events.component.html
@@ -1,1 +1,1 @@
-  <cvc-event-feed [organizationId]="organizationId" tagDisplay="hideOrg"></cvc-event-feed>
+  <cvc-event-feed [organizationId]="organizationId" tagDisplay="hideOrg" [mode]="this.mode"></cvc-event-feed>
