--- a/client/src/app/views/users/users-events/users-events.component.html
+++ b/client/src/app/views/users/users-events/users-events.component.html
@@ -1,1 +1,1 @@
-  <cvc-event-feed [userId]="userId" tagDisplay="hideUser"></cvc-event-feed>
+  <cvc-event-feed [userId]="userId" tagDisplay="hideUser" [mode]="this.mode"></cvc-event-feed>
