Hook up variant group popovers

--- a/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
+++ b/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
@@ -13,8 +13,7 @@
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #popoverContent>
-    <p>variantgroup popover here</p>
-    <!-- <cvc-variantgroup-popover *ngIf="enablePopover" [variantgroupId]="variantgroup.id"></cvc-variantgroup-popover> -->
+    <cvc-variant-group-popover *ngIf="enablePopover" [variantGroupId]="variantgroup.id"></cvc-variant-group-popover>
   </ng-template>
 </ng-template>
 
