Add mutation for adding a new variant group

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -29,6 +29,11 @@
               Suggest Source
             </a>
           </li>
+          <li nz-menu-item>
+            <a routerLink="/variant-groups/add/submit">
+              Add Variant Group
+            </a>
+          </li>
         </ul>
       </nz-dropdown-menu>
     </div>
