--- a/client/src/app/forms/variant-group-submit/variant-group-submit.form.html
+++ b/client/src/app/forms/variant-group-submit/variant-group-submit.form.html
@@ -29,10 +29,10 @@
   </ng-container>
 </ng-template>
 
-<div nz-row>
+<!-- <div nz-row>
   <div nz-col
     nzSpan="24">
     <ngx-json-viewer *ngIf="formModel"
       [json]="formModel"></ngx-json-viewer>
   </div>
-</div>
+</div> -->
