Hook up the about/help/contact pages

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -270,10 +270,10 @@
         <div nz-col nzFlex="300px" id="header-menu">
           <ul nz-menu nzMode="horizontal" nzTheme="dark">
             <li nz-menu-item nzSelected nzMatchRouter>
-              <a routerLink="/pages/about">About CIViC</a>
+              <a href="https://civic.readthedocs.io/en/latest/about.html" target="_blank">About CIViC</a>
             </li>
             <li nz-menu-item nzSelected nzMatchRouter>
-              <a routerLink="/pages/help">Help</a>
+              <a href="https://civic.readthedocs.io/en/latest/help.html" target="_blank">Help</a>
             </li>
             <li nz-menu-item nzSelected nzMatchRouter>
               <a routerLink="/pages/contact">Contact</a>
