--- a/client/src/app/views/sources/sources-summary/sources-summary.page.html
+++ b/client/src/app/views/sources/sources-summary/sources-summary.page.html
@@ -63,7 +63,6 @@
     <cvc-source-suggestions-table [sourceId]="sourceId"></cvc-source-suggestions-table>
   </cvc-entity-table-card>
   <ng-template #sourceSuggestionCardTitle>
-    <i nz-icon
-      nzType="flag-add"></i> Source suggestions for <i>{{ source.title}}</i>
+    Source suggestions for <i>{{ source.title}}</i>
   </ng-template>
 </nz-space>
