--- a/client/src/app/views/sources/sources-detail/sources-detail.view.html
+++ b/client/src/app/views/sources/sources-detail/sources-detail.view.html
@@ -1,5 +1,17 @@
 <ng-container *ngIf="source$ | ngrxPush as source">
-  <cvc-section-navigation [displayName]="source.citation"> </cvc-section-navigation>
+  <cvc-section-navigation [displayName]="source.citation"
+    [actionsTpl]="sourcesActions"> </cvc-section-navigation>
+  <ng-template #sourcesActions>
+    <ng-container *ngrxLet="viewer$ as viewer">
+      <button routerLink="/sources/add"
+        *ngIf="viewer.signedIn"
+        nz-button
+        nzSize="small">
+        <i nz-icon
+          nzType="plus-circle"></i> Suggest a New Source
+      </button>
+    </ng-container>
+  </ng-template>
   <nz-page-header class="site-page-header">
     <nz-page-header-title>
       <i nz-icon
