--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -6,8 +6,14 @@
       <nz-space nzDirection="vertical"
         nzSize="middle"
         class="space-container">
-        <nz-carousel nzAutoPlay nzAutoPlaySpeed="5000"
+        <nz-carousel nzAutoPlay nzAutoPlaySpeed="10000"
           *nzSpaceItem>
+          <div nz-carousel-content>
+            <h1>Welcome to CIViC </h1>
+          <h2>
+            an open-source platform supporting crowdsourced and expert-moderated cancer variant curation.
+          </h2>
+          </div>
           <div nz-carousel-content>
             <h1>
               Discover supported clinical interpretations <br/>
@@ -22,32 +28,18 @@
             Become an Editor! <br/>Help moderate updates to CIViC
           </h1></div>
         </nz-carousel>
-        <cvc-site-stats-card *nzSpaceItem></cvc-site-stats-card>
       </nz-space>
     </nz-col>
   </nz-row>
-  <nz-row [nzGutter]="16"
-    *nzSpaceItem>
-    <nz-col [nzSpan]="12">
-      <nz-card nzTitle="The Precision Medicine Revolution"
-        nzSize="small"
-        class="home-card">
-        Precision medicine refers to the use of prevention and treatment strategies that are tailored to the unique features of each individual and their disease. In the context of cancer this might involve the identification of specific mutations shown to predict response to a targeted therapy. The biomedical literature describing these associations is large and growing rapidly. Currently these interpretations exist largely in private or encumbered databases resulting in extensive repetition of effort.
-
-      </nz-card>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <nz-card nzTitle="CIViC's Role in Precision Medicine"
-        nzSize="small"
-        class="home-card">
-        Realizing precision medicine will require this information to be centralized, debated and interpreted for application in the clinic. CIViC is an open access, open source, community-driven web resource for Clinical Interpretation of Variants in Cancer. Our goal is to enable precision medicine by providing an educational forum for dissemination of knowledge and active discussion of the clinical significance of cancer genome alterations. For more details refer to the 2017 CIViC publication in Nature Genetics.
-      </nz-card>
+  <nz-row *nzSpaceItem [nzGutter]="16">
+    <nz-col [nzSpan]="24">
+      <cvc-site-stats-card></cvc-site-stats-card>
     </nz-col>
   </nz-row>
   <nz-row [nzGutter]="16"
     *nzSpaceItem>
     <nz-col [nzSpan]="12">
-      <nz-card nzTitle="News & Events"
+      <nz-card style="height: 100%" nzTitle="News & Events"
         nzSize="small"
         class="home-card">
         <nz-list nzItemLayout="vertical">
@@ -74,9 +66,7 @@
                   nzType="secondary">June 29th, 2020</span>
               </nz-list-item-meta-title>
             </nz-list-item-meta>
-            <nz-list-item-meta-description>
               St. Jude's ProteinPaint now incorporates a CIViC variant track, displaying CIViC curated data along with a variety of additional sources, and providing one-click access to CIViC's variant summaries. We've also added ProteinPaint links to our gene summaries.
-            </nz-list-item-meta-description>
             <nz-list-item-extra>
               <img width="150"
                 alt="logo"
@@ -91,7 +81,19 @@
       <nz-card nzTitle="Live Curation Activity"
         style="min-height: 600px"
         nzSize="small"
-        class="home-card"></nz-card>
+        class="home-card">
+        <cvc-event-feed [showFilters]="false" [mode]="feedMode" [pageSize]="12" tagDisplay="hideOrg"></cvc-event-feed>
+      </nz-card>
+    </nz-col>
+  </nz-row>
+  <nz-row *nzSpaceItem [nzGutter]="16">
+    <nz-col [nzSpan]="24">
+      <nz-card nzTitle="Medical Disclaimer: This resource is intended for purely research purposes. It should not be used for emergencies or medical or professional advice."
+        nzSize="small"
+        class="home-card">
+        <p>CIViC is a community-edited forum for discussion and interpretation of peer-reviewed publications pertaining to the clinical relevance of variants (or biomarker alterations) in cancer. These interpretations may include associations between molecular alterations (or lack of alteration) and one or more drugs, diagnoses, prognoses or other treatment decisions. These interpretations of clinical significance (or lack of clinical significance) are purely for research purposes. A finding of no interpretation does not necessarily indicate lack of relevance for any specific variant or biomarker alteration. Interpretations are not presented in ranked order of potential or predicted importance.These interpretations make no promise or guarantee of any clinical benefit (or lack of clinical benefit).</p>
+        <p>The civicdb.org website does not provide any medical or healthcare products, services or advice, and is not for medical emergencies or urgent situations. <strong>IF YOU THINK YOU MAY HAVE A MEDICAL EMERGENCY, CALL YOUR DOCTOR OR 911 IMMEDIATELY</strong>. Information contained on this website is not a substitute for a doctor's medical judgment or advice. We recommend that you discuss your specific, individual health concerns with your doctor or health care professional.</p>
+      </nz-card>
     </nz-col>
   </nz-row>
 </nz-space>
