all 'Add Source Suggetion' links/buttons work

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li nz-menu-item>
-            <a routerLink="/assertions/add/submit">
+            <a routerLink="/sources/add">
               Suggest Source
             </a>
           </li>
