fix links in evidence popover. closes #283

--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -98,19 +98,19 @@
       <nz-row id="entity-child-counts">
         <nz-col nzSpan="24">
           <nz-space nzSize="small">
-            <a routerLink="/evidences/{{evidence.id}}/flags" *nzSpaceItem>
+            <a routerLink="/evidence/{{evidence.id}}/flags" *nzSpaceItem>
               <nz-tag nzColor="red">
                 <i nz-icon
                   nzType="civic-flag"></i> Flags ({{ evidence.flags.totalCount }})
               </nz-tag>
             </a>
-            <a routerLink="/evidences/{{evidence.id}}/revisions" *nzSpaceItem>
+            <a routerLink="/evidence/{{evidence.id}}/revisions" *nzSpaceItem>
               <nz-tag nzColor="orange">
                 <i nz-icon
                   nzType="civic-revision"></i> Revisions ({{ evidence.revisions.totalCount }})
               </nz-tag>
             </a>
-            <a routerLink="/evidences/{{evidence.id}}/comments" *nzSpaceItem>
+            <a routerLink="/evidence/{{evidence.id}}/comments" *nzSpaceItem>
               <nz-tag nzColor="blue">
                 <i nz-icon
                   nzType="civic-comment"></i> Comments ({{ evidence.comments.totalCount }})
