added submenu headers to sidebar menu

--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -39,10 +39,6 @@ nz-sider {
   }
 }
 
-.menu-group {
-  margin-bottom: 1.5em;
-}
-
 // BRANDING
 .sidebar-logo {
   height: 90px;
@@ -97,6 +93,17 @@ nz-sider {
 
 .header-quicksearch p, .header-menu p, .header-user p {
   color: @geekblue-2;
+}
+
+// SIDEBAR MENU
+.menu-group {
+  margin-bottom: 1.5em;
+}
+
+.menu-header {
+  color: #CCC;
+  padding: 0 12px;
+  text-transform: uppercase;
 }
 
 // CONTENT
