--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -9,10 +9,12 @@
     <a routerLink="/">
       <div class="sidebar-logo"
         [ngClass]="{ 'is-collapsed': isCollapsed }">
-        <img src="assets/images/civic-logo_sidebar-expanded.png" *ngIf="!isCollapsed"
-          alt="CIViC - Clinical Interpretations of Variants in Cancer" >
-        <img src="assets/images/civic-logo_sidebar-collapsed.png" *ngIf="isCollapsed"
-          alt="CIViC - Clinical Interpretations of Variants in Cancer" >
+        <img src="assets/images/civic-logo_sidebar-expanded.png"
+          *ngIf="!isCollapsed"
+          alt="CIViC - Clinical Interpretations of Variants in Cancer">
+        <img src="assets/images/civic-logo_sidebar-collapsed.png"
+          *ngIf="isCollapsed"
+          alt="CIViC - Clinical Interpretations of Variants in Cancer">
       </div>
     </a>
     <ul nz-menu
@@ -20,276 +22,301 @@
       nzMode="inline"
       class="menu-group"
       [nzInlineCollapsed]="isCollapsed">
+      <li nz-menu-group
+        nzTitle="Entities">
+        <ul>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Assertions' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-assertion"></i>
+            <span> <a routerLink="/assertions">Assertions</a> </span>
+          </li>
 
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Assertions' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-assertion"></i>
-        <span>
-          <a routerLink="/assertions">Assertions</a>
-        </span>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Evidence' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-evidence"></i>
+            <span> <a routerLink="/evidence">Evidence</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Genes' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-gene"></i>
+            <span> <a routerLink="/genes">Genes</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Variants' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-variant"></i>
+            <span> <a routerLink="/variants">Variants</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Variant Groups' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-variantgroup"></i>
+            <span> <a routerLink="/variant-groups">Variant Groups</a> </span>
+          </li>
+
+        </ul>
       </li>
 
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Evidence' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-evidence"></i>
-        <span>
-          <a routerLink="/evidence">Evidence</a>
-        </span>
+      <li nz-menu-group
+        nzTitle="Attributes">
+        <ul>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Clinical Trials' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="audit"></i>
+            <span> <a routerLink="/clinical-trials">Clinical Trials</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Diseases' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-disease"></i>
+            <span> <a routerLink="/diseases">Diseases</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Drugs' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-intervention"></i>
+            <span> <a routerLink="/drugs">Drugs</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Phenotypes' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-phenotype"></i>
+            <span> <a routerLink="/phenotypes">Phenotypes</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Sources' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-source"></i>
+            <span> <a routerLink="/sources">Sources</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Source Suggestions' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="file-add"></i>
+            <span> <a routerLink="/source-suggestions">Source Suggestions</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Variant Types' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-varianttype"></i>
+            <span> <a routerLink="/variant-types">Variant Types</a> </span>
+          </li>
+        </ul>
       </li>
 
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Genes' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-gene"></i>
-        <span>
-          <a routerLink="/genes">Genes</a>
-        </span>
+      <li nz-menu-group
+        nzTitle="Curation">
+        <ul>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Revisions' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-revision"></i>
+            <span> <a routerLink="/revisions">Revisions</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Comments' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-comment"></i>
+            <span> <a routerLink="/comments">Comments</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Flags' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-flag"></i>
+            <span> <a routerLink="/flags">Flags</a> </span>
+          </li>
+
+        </ul>
       </li>
+      <li nz-menu-group
+        nzTitle="Community">
+        <ul>
 
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Variants' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-variant"></i>
-        <span>
-          <a routerLink="/variants">Variants</a>
-        </span>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Community' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="global"></i>
+            <span> <a routerLink="/community" id="main-community">Community</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Users' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-curator"></i>
+            <span> <a routerLink="/users" id="main-users">Users</a> </span>
+          </li>
+
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Organizations' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="civic-organization"></i>
+            <span> <a routerLink="/organizations" id="main-organization">Organizations</a> </span>
+          </li>
+
+        </ul>
       </li>
+      <li nz-menu-group
+        nzTitle="Resources">
+        <ul>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Data Releases' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="download"></i>
+            <span> <a routerLink="/releases" id="releases">Data Releases</a> </span>
+          </li>
 
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Variant Groups' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-variantgroup"></i>
-        <span>
-          <a routerLink="/variant-groups">Variant Groups</a>
-        </span>
-      </li>
-
-    </ul>
-
-    <ul nz-menu
-      nzTheme="dark"
-      nzMode="inline"
-      class="menu-group"
-      [nzInlineCollapsed]="isCollapsed">
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Clinical Trials' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="audit"></i>
-        <span>
-          <a routerLink="/clinical-trials">Clinical Trials</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Diseases' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-disease"></i>
-        <span>
-          <a routerLink="/diseases">Diseases</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Drugs' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-intervention"></i>
-        <span>
-          <a routerLink="/drugs">Drugs</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Phenotypes' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-phenotype"></i>
-        <span>
-          <a routerLink="/phenotypes">Phenotypes</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Sources' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-source"></i>
-        <span>
-          <a routerLink="/sources">Sources</a>
-        </span>
-      </li>
-
-    <li nz-menu-item nz-tooltip
-      nzTooltipPlacement="right"
-      [nzTooltipTitle]="isCollapsed ? 'Source Suggestions' : ''"
-      nzSelected nzMatchRouter>
-      <i nz-icon nzType="file-add"></i>
-      <span>
-        <a routerLink="/source-suggestions">Source Suggestions</a>
-      </span>
-    </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Variant Types' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-varianttype"></i>
-        <span>
-          <a routerLink="/variant-types">Variant Types</a>
-        </span>
-      </li>
-
-    </ul>
-
-    <ul nz-menu
-      nzTheme="dark"
-      nzMode="inline"
-      class="menu-group"
-      [nzInlineCollapsed]="isCollapsed">
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Revisions' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-revision"></i>
-        <span>
-          <a routerLink="/revisions">Revisions</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Comments' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-comment"></i>
-        <span>
-          <a routerLink="/comments">Comments</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Flags' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-flag"></i>
-        <span>
-          <a routerLink="/flags">Flags</a>
-        </span>
-      </li>
-
-    </ul>
-
-    <ul nz-menu
-      nzTheme="dark"
-      nzMode="inline"
-      class="menu-group"
-      [nzInlineCollapsed]="isCollapsed">
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Community' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="global"></i>
-        <span>
-          <a routerLink="/community" id="main-community">Community</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Users' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-curator"></i>
-        <span>
-          <a routerLink="/users" id="main-users">Users</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Organizations' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="civic-organization"></i>
-        <span>
-          <a routerLink="/organizations" id="main-organization">Organizations</a>
-        </span>
-      </li>
-
-    </ul>
-
-    <ul nz-menu
-      nzTheme="dark"
-      nzMode="inline"
-      class="menu-group"
-      [nzInlineCollapsed]="isCollapsed">
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Data Releases' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="download"></i>
-        <span>
-          <a routerLink="/releases" id="releases">Data Releases</a>
-        </span>
-      </li>
-
-      <li nz-menu-item nz-tooltip
-        nzTooltipPlacement="right"
-        [nzTooltipTitle]="isCollapsed ? 'Statistics' : ''"
-        nzSelected nzMatchRouter>
-        <i nz-icon nzType="bar-chart"></i>
-        <span>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Statistics' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="bar-chart"></i>
+            <span>
           <a routerLink="/statistics" id="statistics">Statistics</a>
         </span>
+          </li>
+        </ul>
       </li>
     </ul>
-
-    <div nz-row nzJustify="center" nzAlign="bottom">
-      <div nz-col>
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
-          <img width="100" src="assets/images/cc-zero.png" *ngIf="!isCollapsed"
-            alt="CC0 1.0 Universal (CC0 1.0) Public Domain Dedication Logo" >
-        </a>
-      </div>
-    </div>
   </nz-sider>
-  <nz-layout class="right-layout" [ngClass]="{ 'is-collapsed': isCollapsed }">
+  <nz-layout class="right-layout"
+    [ngClass]="{ 'is-collapsed': isCollapsed }">
     <nz-header>
       <div nz-row>
         <!-- sidebar collapse/show trigger -->
-        <div nz-col nzFlex="40px">
-          <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
+        <div nz-col
+          nzFlex="40px">
+          <span class="header-trigger"
+            (click)="isCollapsed = !isCollapsed">
             <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'" ></i>
           </span>
         </div>
-        <div nz-col nzFlex="300px" id="header-search">
+        <div nz-col
+          nzFlex="300px"
+          id="header-search">
           <cvc-quicksearch></cvc-quicksearch>
         </div>
-        <div nz-col nzFlex="300px" id="header-menu">
-          <ul nz-menu nzMode="horizontal" nzTheme="dark">
-            <li nz-menu-item nzSelected nzMatchRouter>
-              <a href="https://civic.readthedocs.io/en/latest/about.html" target="_blank">About CIViC</a>
+        <div nz-col
+          nzFlex="300px"
+          id="header-menu">
+          <ul nz-menu
+            nzMode="horizontal"
+            nzTheme="dark">
+            <li nz-menu-item
+              nzSelected
+              nzMatchRouter>
+              <a routerLink="/pages/about">About CIViC</a>
             </li>
-            <li nz-menu-item nzSelected nzMatchRouter>
-              <a href="https://civic.readthedocs.io/en/latest/help.html" target="_blank">Help</a>
+            <li nz-menu-item
+              nzSelected
+              nzMatchRouter>
+              <a routerLink="/pages/help">Help</a>
             </li>
-            <li nz-menu-item nzSelected nzMatchRouter>
+            <li nz-menu-item
+              nzSelected
+              nzMatchRouter>
               <a routerLink="/pages/contact">Contact</a>
             </li>
           </ul>
         </div>
         <!-- header user -->
-        <div nz-col nzFlex="auto" id="header-viewer">
+        <div nz-col
+          nzFlex="auto"
+          id="header-viewer">
           <cvc-login-button *ngIf="signedOut$ | async"></cvc-login-button>
           <cvc-viewer-button *ngIf="signedIn$ | async"></cvc-viewer-button>
         </div>
