--- a/client/src/app/forms/source-submit/source-submit.form.html
+++ b/client/src/app/forms/source-submit/source-submit.form.html
@@ -29,7 +29,7 @@
         nzSize="small">
         <p>
           Thank You! Your source will now appear in the
-          <a routerLink="['/curation', 'source-suggestions']">
+          <a routerLink="/curation/source-suggestions">
           Source Suggestion curation queue.</a>
         </p>
       </ng-template>
