--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -29,7 +29,7 @@
             nzMatchRouter>
             <i nz-icon
               nzType="home" nzThemes="filled"></i>
-            <span> <a routerLink="/">Home</a> </span>
+            <span> <a routerLink="/welcome">Home</a> </span>
           </li>
         </ul>
       </li>
@@ -176,7 +176,7 @@
             nzMatchRouter>
             <i nz-icon
               nzType="file-add"></i>
-            <span> <a routerLink="/curation/queues/pending-souces">Sources Queue</a> </span>
+            <span> <a routerLink="/curation/queues/pending-sources">Sources Queue</a> </span>
           </li>
           <li nz-menu-item
             nz-tooltip
