--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -96,12 +96,10 @@ nz-sider {
 }
 
 // SIDEBAR MENU
-
-.menu-group {
-  color: #CCC;
-  padding: 0 12px;
-  text-transform: uppercase;
+.sidebar-menu {
+  margin-top: -24px; // removes gap caused by home link's empty menu-group title
 }
+
 
 // CONTENT
 nz-content {
