--- a/client/src/app/views/curation/curation-queues/curation-queues.view.html
+++ b/client/src/app/views/curation/curation-queues/curation-queues.view.html
@@ -1,1 +1,21 @@
-<router-outlet></router-outlet>
+<cvc-section-navigation>
+</cvc-section-navigation>
+
+<nz-page-header class="site-page-header">
+
+  <!-- title -->
+  <nz-page-header-title>
+    Curation Queues
+  </nz-page-header-title>
+
+
+  <!-- header action btns, actions menu -->
+  <nz-page-header-extra></nz-page-header-extra>
+
+  <nz-page-header-content>
+    <cvc-tab-navigation [tabs]="this.tabs"> </cvc-tab-navigation>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </nz-page-header-content>
+</nz-page-header>
