refactored phenotypes, variant-types sections

--- a/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
+++ b/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
@@ -1,9 +1,13 @@
-<nz-space nzSize="middle" *ngIf="variantTypeId" nzDirection="vertical" class="space-align-block">
-  <cvc-entity-table-card [cvcTitle]="variantTableTitle" *nzSpaceItem>
+<nz-space nzSize="middle"
+  *ngIf="variantTypeId"
+  nzDirection="vertical"
+  class="space-align-block">
+  <cvc-entity-table-card [cvcTitle]="variantTableTitle"
+    *nzSpaceItem>
     <cvc-variants-table [variantTypeId]="variantTypeId"></cvc-variants-table>
   </cvc-entity-table-card>
   <ng-template #variantTableTitle>
-    <i nz-icon nzType="civic-varianttype"></i>
-    Type Variants
+    <i nz-icon
+      nzType="civic-varianttype"></i> Type Variants
   </ng-template>
 </nz-space>
