tighened up menu spacing, improved collapsed styles, added CC0 notice back in

--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -31,7 +31,7 @@ nz-sider {
   margin-left: @app-sidebar-width;
   width: 100%;
   position: relative;
-  transition: all .2s,padding 0s;
+  transition: all 0.2s, padding 0s;
   background-color: @layout-header-background;
 
   &.is-collapsed {
@@ -39,6 +39,40 @@ nz-sider {
   }
 }
 
+.sidebar-menu {
+  margin-top: -20px; // removes gap caused by home link's empty menu-group title
+  ::ng-deep .ant-menu-item-group-title {
+    padding-bottom: 0;
+  }
+  &.is-collapsed {
+    // adjusts menu for collapsed state
+    margin-top: -8px;
+    ::ng-deep .ant-menu-item-group-title {
+      text-align: center;
+    }
+  }
+}
+
+.cc-notice {
+  margin-top: 5em;
+  text-align: center;
+  width: 170px;
+  .cc-glyph {
+    width: 56px;
+  }
+  .cc-txt {
+    width: 76px;
+  }
+  &.is-collapsed {
+    width: 80px;
+    .cc-glyph {
+      width: 35px;
+    }
+    .cc-txt {
+      display: none;
+    }
+  }
+}
 // BRANDING
 .sidebar-logo {
   height: 90px;
@@ -46,14 +80,14 @@ nz-sider {
     width: 133px;
     height: auto;
     margin: 12px 16px;
-    transition: all .2s;
+    transition: all 0.2s;
   }
   &.is-collapsed {
     img {
       width: 40px;
       height: auto;
       margin: 12px 20px;
-      transition: all .2s;
+      transition: all 0.2s;
     }
   }
 }
@@ -64,7 +98,7 @@ nz-sider {
   line-height: @app-header-height;
   padding: @app-header-padding;
   position: fixed;
-  width: calc(~'100% - @{app-sidebar-width}');
+  width: calc(~"100% - @{app-sidebar-width}");
   z-index: 10;
   color: @geekblue-2;
 }
@@ -81,7 +115,7 @@ nz-sider {
   height: @app-header-height;
 }
 
-#header-search{
+#header-search {
   height: @app-header-height;
   padding-right: @default-padding-md;
 }
@@ -91,15 +125,13 @@ nz-sider {
   padding-right: 1em;
 }
 
-.header-quicksearch p, .header-menu p, .header-user p {
+.header-quicksearch p,
+.header-menu p,
+.header-user p {
   color: @geekblue-2;
 }
 
 // SIDEBAR MENU
-.sidebar-menu {
-  margin-top: -24px; // removes gap caused by home link's empty menu-group title
-}
-
 
 // CONTENT
 nz-content {
