Add "last updated" timestamps for fda regulatory approval and fda companion test fields

--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -225,6 +225,7 @@
               [nzType]="'close-square'"
               [nzTheme]="'twotone'"
               [nzTwotoneColor]="'#d93026'"></i>
+            (last updated {{ assertion.regulatoryApprovalLastUpdated | timeago }})
           </nz-descriptions-item>
 
           <!-- FDA companion test -->
@@ -239,6 +240,7 @@
               [nzType]="'close-square'"
               [nzTheme]="'twotone'"
               [nzTwotoneColor]="'#d93026'"></i>
+            (last updated {{ assertion.fdaCompanionTestLastUpdated | timeago }})
           </nz-descriptions-item>
 
           <!-- NCCN guideline -->
