--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -57,14 +57,16 @@
           </nz-descriptions-item>
         </ng-template>
 
-        <nz-descriptions-item nzTitle="FDA Companion Test">
-          <i nz-icon *ngIf="assertion.fdaCompanionTest" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
-          <i nz-icon *ngIf="!assertion.fdaCompanionTest" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
-        </nz-descriptions-item>
-
         <nz-descriptions-item nzTitle="Regulatory Approval">
           <i nz-icon *ngIf="assertion.regulatoryApproval" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
           <i nz-icon *ngIf="!assertion.regulatoryApproval" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
+          (last updated {{ assertion.regulatoryApprovalLastUpdated | timeago }})
+        </nz-descriptions-item>
+
+        <nz-descriptions-item nzTitle="FDA Companion Test">
+          <i nz-icon *ngIf="assertion.fdaCompanionTest" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
+          <i nz-icon *ngIf="!assertion.fdaCompanionTest" nzType="close-square" nzTheme="twotone" nzTwotoneColor="#d93026"></i>
+          (last updated {{ assertion.fdaCompanionTestLastUpdated | timeago }})
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="NCCN Guideline">
