Create a new plain-tag-overflow component and use it for the author list on the sources table

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -95,11 +95,9 @@
         {{ source.name }}
       </td>
       <td>
-        <p nz-typography>
-          <span *ngFor="let author of source.authors; last as isLast">
-                        {{ author }}{{ isLast ? '' : ', ' }}
-                      </span>
-        </p>
+        <cvc-plain-tag-overflow
+        [tags]="source.authors"
+        [matchingText]="authorInput"> </cvc-plain-tag-overflow>
       </td>
       <td>
         {{ source.publicationYear }}
